Fixes menu visibility when off screen

--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -13,20 +13,26 @@
   display: block;
 }
 
-// TODO: per lighthouse accessibility recommendation, hide offscreen elements
 .app-menu {
-  z-index: 10;
+  background-color: var(--menu-bg-color);
   height: 100%;
   position: fixed;
-  right: -45%;
+  right: 0;
   top: 5rem;
+  transition: 
+    transform 0.2s ease-in-out,
+    visibility 0s;
+  visibility: visible;
   width: 45%;
-  background-color: var(--menu-bg-color);
-  transition: right 0.25s 0s ease-in-out;
+  z-index: 10;
 }
 
-.app-menu--active {
-  right: 0;
+.app-menu--closed {
+  transform: translateX(100%);
+  transition:
+    transform 0.2s ease-in-out,
+    visibility 0s 0.2s;
+  visibility: hidden;
 }
 
 .app-menu__list {
