--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -23,7 +23,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--theme-cover-bg-color);
+  background-color: var(--menu-cover-bg-color);
   z-index: 20;
 }
 
